--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>Пенсионеров, которые живут в квартире одни, призвали оформить новую льготу</title>
+   <title>Если есть накопленный стаж. Каким пенсионерам дадут новые 12–36 тысяч рублей</title>
   <script>
-    window.location.replace("https://ok.me/nvxF1");
+    window.location.replace("https://ok.me/9L1G1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/nvxF1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/9L1G1">сюда</a>.
 </body>
 </html>
