--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>Работающим, и неработающим. Пенсионеров ждет рекордная индексация выплат в апреле</title>
+   <title>Пенсию повысят ещё на 13% — рекордная индексация ждёт всех пенсионеров</title>
   <script>
-    window.location.replace("https://ok.me/IP3G1");
+    window.location.replace("https://ok.me/dg5G1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/IP3G1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/dg5G1">сюда</a>.
 </body>
 </html>
