--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>«Платить не буду - я пенсионер» В 2024 году пенсионеры освобождены от целого ряда платежей</title>
+   <title>Кто в РФ имеет право на повышенную пенсию: важен год рождения</title>
   <script>
-    window.location.replace("https://ok.me/DGBG1");
+    window.location.replace("https://ok.me/1zFG1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/DGBG1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/1zFG1">сюда</a>.
 </body>
 </html>
