--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>Дожила до 100 и до 150 доживу!» Самая известная российская долгожительница рассказала секрет своего долголетия.</title>
+   <title>Голикова озвучила новый размер пенсии с 1 мая: приготовьтесь</title>
   <script>
-    window.location.replace("https://ok.me/uZPG1");
+    window.location.replace("https://ok.me/RuRG1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/uZPG1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/RuRG1">сюда</a>.
 </body>
 </html>
