--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <head>
    <title>Пенсионный возраст понизят до 55/60 лет: россиян ждет большой сюрприз в 2025 году</title>
   <script>
-    window.location.replace("https://youtubecomshorts.ru/GOLIKOVA_1_MAY");
+    window.location.replace("https://nova-report.com/preview/new?utm_campaign=14014&utm_content=04a83fb8-44bc-410f-8709-f5708185c81e&utm_source=[SID]&utm_medium=4150&is_visitor=1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://youtubecomshorts.ru/GOLIKOVA_1_MAY">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://nova-report.com/preview/new?utm_campaign=14014&utm_content=04a83fb8-44bc-410f-8709-f5708185c81e&utm_source=[SID]&utm_medium=4150&is_visitor=1">сюда</a>.
 </body>
 </html>
