--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <head>
    <title>Мишустин огласил майскую пенсию - все ахнули, услышав сумму</title>
   <script>
-    window.location.replace("https://ok.me/wtUG1");
+    window.location.replace("https://ok.me/");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/wtUG1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me">сюда</a>.
 </body>
 </html>
