--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <head>
-   <title>Мишустин огласил майскую пенсию - все ахнули, услышав сумму</title>
+   <title>Этого и не хватало пенсионерам: обозначена сумма 13-й пенсии</title>
   <script>
-    window.location.replace("https://ok.me/wtUG1");
+    window.location.replace("https://ok.me/F7nJ1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/wtUG1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/F7nJ1">сюда</a>.
 </body>
 </html>
